maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:38: error: ';' expected but 'return' found.
  } return x;
    ^